--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,9 @@ cmake_minimum_required(VERSION 3.14)
 
 set(INCLUDE_DIR src/include)
 set(CMAKE_EXPORT_COMPILE_COMANDS on)
-set(CMAKE_CXX_STANDARD 17)
-project(2BCompiler CXX)
+project(2BCompiler C)
 
 add_executable(
     2bc
-    src/Ayanami.cpp
+    src/Ayanami.c
 )
