--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.14)
 set(INCLUDE_DIR src/include)
 set(CMAKE_EXPORT_COMPILE_COMANDS on)
 set(CMAKE_C_STANDARD 17)
-set(CMAKE_C_FLAGS "-O5")
+set(CMAKE_C_FLAGS "-O5 -Wno-pointer-compare")
 project(2BCompiler C)
 
 add_executable(
