--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,11 @@ cmake_minimum_required(VERSION 3.14)
 set(INCLUDE_DIR src/include)
 set(CMAKE_EXPORT_COMPILE_COMANDS on)
 set(CMAKE_C_STANDARD 17)
-set(CMAKE_C_FLAGS "-O5 -Wno-pointer-compare")
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    set(CMAKE_C_FLAGS "-O5 -Wno-pointer-compare")
+else()
+    set(CMAKE_C_FLAGS "-O5")
+endif()
 project(2BCompiler C)
 
 add_executable(
